@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 # SPDX-License-Identifier: BSD-3-Clause
-# Copyright 2025, Hewlett Packard Enterprise Development LP
+# Copyright 2025-2026, Hewlett Packard Enterprise Development LP
 
 #
 # src/test/util_sds_check/TEST0 -- unittest for shutdown_state_check
@@ -13,6 +13,8 @@ require_test_type short
 require_fs_type none
 
 require_build_type debug
+
+require_sds ./util_sds_check
 
 setup
 
